@@ -2,8 +2,10 @@ opsiconfd (4.0.6.6-1) UNRELEASED; urgency=medium
 
   * Info page: show at what time an ecoding error occured.
   * Infos about updated rrd now only are shown with loglevel 8
+  * opsiconfd.workers: Query decoding now working similar to the one in
+    OPSI.Service.Worker
 
- -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 23 Jul 2015 15:13:26 +0200
+ -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 24 Jul 2015 14:27:18 +0200
 
 opsiconfd (4.0.6.5-1) experimental; urgency=medium
 
